# attopy

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
notebooks/: 01_coherent_state_benchmark.ipynb
src/attopy/: __init__.py  units.py
src/attopy/propagators/: base.py  splitop.py
tests/: test_base.py  test_placeholder.py  test_splitop.py  test_units.py
