[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attopy"
version = "0.1.0-dev"
description = "A Python toolkit for strong-field TDSE simulations with multiple propagator backends"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Carter Montag", email = "montag@arizona.edu" },
]
keywords = [
    "strong-field physics",
    "attosecond",
    "TDSE",
    "high-harmonic generation",
    "HHG",
    "above-threshold ionization",
    "ATI",
    "quantum dynamics",
    "laser-atom interaction",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "jupyter>=1.0",
    "nbmake>=1.4", 
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",   
    "nbsphinx>=0.9",      
]
itvolt = [
    # Fortran build dependencies
    # "scikit-build-core>=0.8",
]

[project.urls]
Homepage = "https://github.com/camontag/attopy"
Documentation = "https://attopy.readthedocs.io"
Repository = "https://github.com/camontag/attopy"
Issues = "https://github.com/camontag/attopy/issues"
Changelog = "https://github.com/camontag/attopy/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=attopy --cov-report=term-missing"

[tool.coverage.run]
source = ["src/attopy"]
omit = ["tests/*"]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "NPY", # numpy-specific rules
]
ignore = [
    "E501", # line too long — handled by formatter
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true  
